// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventTitle renders with also subtitle 1`] = `
<span
  className="detail-page-title"
>
  <Latex>
    Conference Title
  </Latex>
  <span>
    <span>
      : 
    </span>
    <Latex>
      Sub
    </Latex>
  </span>
</span>
`;

exports[`EventTitle renders with everything 1`] = `
<span
  className="detail-page-title"
>
  <Latex>
    Conference Title
  </Latex>
  <span>
    <span>
      : 
    </span>
    <Latex>
      Sub
    </Latex>
  </span>
  <span>
     (
    Test
    )
  </span>
</span>
`;

exports[`EventTitle renders with only title 1`] = `
<span
  className="detail-page-title"
>
  <Latex>
    Conference Title
  </Latex>
</span>
`;
